# CScanPlatform

./: .env.example  .gitignore  docker-compose.yml  index.json  pyproject.toml
app/api/: base.py  urls.py
app/api/dashboard/: urls.py  views.py
app/api/search/: urls.py  views.py
app/app/: settings.py  urls.py
app/dashboard/: urls.py  views.py
app/dashboard/templates/dashboard/: index.html
app/main/: urls.py  views.py
app/main/services/: search_engine.py
app/parsers/: admin.py  models.py
app/parsers/migrations/: 0001_initial.py  0002_source_manager.py  0002_tag_data_pointer.py  0003_tag_tag_order_number.py  0004_alter_tag_data_pointer.py  0005_alter_course_title.py  0006_alter_course_link.py
app/parsers/services/: exceptions.py  parser.py
app/services/: __init__.py  course_service.py  search_engine.py
app/templates/registration/: login.html
